--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,12 +1,7 @@
 name: ci
 
 on:
-  push:
-    branches:
-      - "**"
-    tags:
-      - "*"
-  pull_request:
+  workflow_dispatch:
 
 jobs:
   docker:
