--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,7 +1,12 @@
 name: ci
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - "**"
+    tags:
+      - "*"
+  pull_request:
 
 jobs:
   docker:
