--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,12 +1,12 @@
 name: ci
 
 on:
-  push:
-    branches:
-      - "**"
-    tags:
-      - "*"
-  pull_request:
+  workflow_dispatch:
+    inputs:
+      image_tag:
+        description: 'Tag for the Docker image'
+        required: true
+        default: 'latest'
 
 jobs:
   docker:
