--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,34 +2,42 @@ name: ci
 
 on:
   workflow_dispatch:
-    inputs:
-      image_tag:
-        description: 'Tag for the Docker image'
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
+      # Step 1: Checkout the repository
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
-          images: |
-            sienikam/gccli
-          tags: |
-            type=ref,event=tag
-          flavor: |
-            latest=false
+          fetch-depth: 0  # Fetch all history to get tags
 
+      # Step 2: Login to Docker Hub
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      # Step 3: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # Step 4: Generate metadata for Docker image using latest tag
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: sienikam/gccli
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+          flavor: |
+            latest=false
+
+      # Step 5: Build and push Docker image
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
