--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,42 +2,26 @@ name: ci
 
 on:
   workflow_dispatch:
+    inputs:
+      tag_name:
+        description: 'Tag for the Docker image'
+        required: true
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Checkout the repository
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Fetch all history to get tags
-
-      # Step 2: Login to Docker Hub
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Step 3: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Step 4: Generate metadata for Docker image using latest tag
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: sienikam/gccli
-          tags: |
-            type=ref,event=tag
-          flavor: |
-            latest=false
-
-      # Step 5: Build and push Docker image
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: sienikam/gccli:${{ inputs.tag_name }}
