--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Test Docker image
+        run: |
+          docker run sienikam/gccli
+
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
