--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,9 +18,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Build Docker image
+        uses: docker/build-push-action@v6
+        with:
+          load: true
+          push: false
+
       - name: Test Docker image
         run: |
-          docker run sienikam/gccli
+          docker run --rm
 
       - name: Build and push
         uses: docker/build-push-action@v6
