--- a/.github/workflows/docker-image-feature.yml
+++ b/.github/workflows/docker-image-feature.yml
@@ -1,37 +1,34 @@
 name: ci-feature
-
 on:
   schedule:
-    - cron: "0 0 1 * *"
+    - cron: "0 0 1 *"
   workflow_dispatch:
-
 env:
   TEST_TAG: sienikam/gccli:test
   LATEST_TAG: sienikam/gccli:csvlint
-
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: ci-feature
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
       - name: Build Docker image
         uses: docker/build-push-action@v6
         with:
           load: true
           tags: ${{ env.TEST_TAG }}
-
       - name: Test Docker image
         run: |
           docker run --rm ${{ env.TEST_TAG }}
-
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
