--- a/.github/workflows/docker-image-feature.yml
+++ b/.github/workflows/docker-image-feature.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ci-feature
+          ref: feature
           
       - name: Login to Docker Hub
         uses: docker/login-action@v3
