--- a/.github/workflows/docker-image-feature.yml
+++ b/.github/workflows/docker-image-feature.yml
@@ -17,6 +17,17 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: feature
+
+      - name: Debug - Check current branch and files
+        run: |
+          echo "Current branch:"
+          git branch -a
+          echo "Current commit:"
+          git rev-parse HEAD
+          echo "Latest commits:"
+          git log --oneline -5
+          echo "Working directory contents:"
+          ls -la
           
       - name: Login to Docker Hub
         uses: docker/login-action@v3
