--- a/.github/workflows/docker-image-feature.yml
+++ b/.github/workflows/docker-image-feature.yml
@@ -17,17 +17,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: feature
-
-      - name: Debug - Check current branch and files
-        run: |
-          echo "Current branch:"
-          git branch -a
-          echo "Current commit:"
-          git rev-parse HEAD
-          echo "Latest commits:"
-          git log --oneline -5
-          echo "Working directory contents:"
-          ls -la
           
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -41,6 +30,7 @@ jobs:
       - name: Build Docker image
         uses: docker/build-push-action@v6
         with:
+          context: .
           load: true
           tags: ${{ env.TEST_TAG }}
           
@@ -51,5 +41,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
+          context: .
           push: true
           tags: ${{ env.LATEST_TAG }}
